Fixes image centering on small articles

--- a/shared_resources/css/newsletter.css
+++ b/shared_resources/css/newsletter.css
@@ -185,6 +185,9 @@ h4 {
 .small-article-newsletter article h1 {
   font-size: 1.8em;
 }
+.small-article-newsletter .img-responsive {
+  margin: 0 auto;
+}
 
 .recommended-container-newsletter {
   text-align: center;
