--- a/shared_resources/sass/newsletter/_article-container.scss
+++ b/shared_resources/sass/newsletter/_article-container.scss
@@ -55,6 +55,10 @@
 	article h1 {
 		font-size: 1.8em;
 	}
+
+	.img-responsive {
+		margin: 0 auto;
+	}
 }
 
 .recommended-container-newsletter {
